voting_app/deployements/postgres-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: demo-voting-app
    name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-voting-app
      name: postgres-pod
  template:
    metadata:
      name: postgres-pod
      labels:
        app: demo-voting-app
        name: postgres-pod
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
