voting_app/deployements/redis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: demo-voting-app
    name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-voting-app
      name: redis-pod
  template:
    metadata:
      name: redis-pod
      labels:
        app: demo-voting-app
        name: redis-pod
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
