voting_app/deployements/result-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-deployment
  labels:
    app: demo-voting-app
    name: result-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-voting-app
      name: result-app-pod
  template:
    metadata:
      name: result-app-pod
      labels:
        app: demo-voting-app
        name: result-app-pod
    spec:
      containers:
        - name: result-app
          image: kodekloud/examplevotingapp_result:v1
          ports:
            - containerPort: 80
