voting_app/deployements/voting-app-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-app-deployment
  labels:
    app: demo-voting-app
    name: voting-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-voting-app
      name: voting-app-pod
  template:
    metadata:
      name: voting-app-pod
      labels:
        app: demo-voting-app
        name: voting-app-pod
    spec:
      containers:
        - name: voting-app
          image: kodekloud/examplevotingapp_vote:v1
          ports:
            - containerPort: 80
