voting_app/deployements/worker-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deploy
  labels:
    app: demo-voting-app
    name: worker-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-voting-app
      name: worker-app-pod
  template:
    metadata:
      name: worker-app-pod
      labels:
        app: demo-voting-app
        name: worker-app-pod
    spec:
      containers:
        - name: worker-app
          image: kodekloud/examplevotingapp_worker:v1
