voting_app/deployements/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: voting-app.com
      http:
        paths:
          - backend:
              service:
                name: voting-service
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: result-app.com
      http:
        paths:
          - backend:
              service:
                name: result-service
                port:
                  number: 80
            path: /
            pathType: Prefix
